resolved center aligned

--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+* {
+  box-sizing: border-box;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
